--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,5 @@
+
+
 /* The Modal Background */
 .modal {
     display: none; 
@@ -19,7 +21,8 @@
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: 50%;
+    font-family: 'Ubuntu Mono', monospace;
   }
   
   /* The Close Button */
@@ -44,8 +47,14 @@
       
   }
 
+  /* Reusable Hide Class */
+  .hide-element {
+      visibility: hidden;
+  }
+
+/* === Home Page CSS === */
   .my-nav {
-      background-color: blue;
+      background-color: white;
       border-bottom: solid 1px black;
   }
 
@@ -56,12 +65,12 @@
   }
 
   .nav-attr {
-      color: white;
+      color: black;
       padding:15px;
   }
 
   .title-center {
-      background-image: url(https://en.unesco.org/sites/default/files/styles/extra_large_1600x1600/public/banner_ifap_938x488.jpg?itok=2ZFwfeDI);
+      background-image: url(https://wallpapercave.com/wp/wp2787778.jpg);
       background-size: cover;
       border-bottom: solid 1px black;
   }
@@ -91,3 +100,40 @@
     font-size: 15px;
     font-family: 'Times New Roman', Times, serif;
 }
+
+/* === anime.js css ===*/
+.ml1 {
+    font-weight: 900;
+    font-size: 3.5em;
+  }
+  
+  .ml1 .letter {
+    display: inline-block;
+    line-height: 1em;
+  }
+  
+  .ml1 .text-wrapper {
+    position: relative;
+    display: inline-block;
+    padding-top: 0.1em;
+    padding-right: 0.05em;
+    padding-bottom: 0.15em;
+  }
+  
+  .ml1 .line {
+    opacity: 0;
+    position: absolute;
+    left: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #fff;
+    transform-origin: 0 0;
+  }
+  
+  .ml1 .line1 { top: 0; }
+  .ml1 .line2 { bottom: 0; }
+
+  /* Article Manipulation */
+  #body-input {
+      width:80%;
+  }
