--- a/public/css/style.css
+++ b/public/css/style.css
@@ -148,3 +148,9 @@
     text-decoration: underline;
     font-size:25px;
   }
+
+  @media screen and (max-width: 800px) {
+    .page-title {
+      font-size:40px;
+    }
+  }
